--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.6.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "dom-parser": "^0.1.5",
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
